--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -16,7 +16,8 @@
       <li><a href="/welcome/Team">Welcome</a></li>
       <li><a href="/joke">Jokes</a></li>
       <li><a href="/hello">Hello</a></li>
-</ul>
+      <li><a href="/bye">Goodbye</a></li>
+    </ul>
 </nav>
     <h1>{{ title }}</h1>
     {% block body_content %}
